--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,75 +8,169 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.calculate.MainActivity$PlaceholderFragment" >
-    
-    <TableRow >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
         <TextView
-    	    android:id="@+id/date_id"
-   	 	    android:layout_width="wrap_content"
-   	 	  	android:layout_height="wrap_content"
-     	    android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:id="@+id/date_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
         <TextView
-    	    android:id="@+id/newDate_id"
-   	 	    android:layout_width="wrap_content"
-   	 	  	android:layout_height="wrap_content"
-     	    android:textAppearance="?android:attr/textAppearanceLarge" />
-    </TableRow>
-    
-    <TableRow >
+            android:id="@+id/newDate_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
         <TextView
             android:id="@+id/Latitude"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-     	    android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
         <TextView
             android:id="@+id/newLatitude"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-     	    android:textAppearance="?android:attr/textAppearanceLarge" />
-    </TableRow>
-    
-    <TableRow >
-	    <TextView
-    	    android:id="@+id/Longitude"
-    	    android:layout_width="wrap_content"
-    	    android:layout_height="wrap_content"
-     	    android:textAppearance="?android:attr/textAppearanceLarge" />
-	    <TextView
-    	    android:id="@+id/newLongitude"
-    	    android:layout_width="wrap_content"
-    	    android:layout_height="wrap_content"
-     	    android:textAppearance="?android:attr/textAppearanceLarge" />
-    </TableRow>
-    
-    <TableRow >
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
         <TextView
-        	android:id="@+id/distance_id"
-       		android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:textAppearance="?android:attr/textAppearanceLarge" />        
-    </TableRow>
-    
-    <TableRow >
+            android:id="@+id/Longitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
         <TextView
-        	android:id="@+id/time_id"
-       		android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:textAppearance="?android:attr/textAppearanceLarge" />        
-    </TableRow>
-    
-    <TableRow >
+            android:id="@+id/newLongitude"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/saveDate_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/saveLatitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/saveLongitude"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/distance_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/costTime_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
         <TextView
-        	android:id="@+id/are_you_ready"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:textAppearance="?android:attr/textAppearanceLarge"
-        	android:text="@string/ready" />
-    	<Button 
-        	android:id="@+id/go_button"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="@string/go_button"
-        	android:background="#808080"
-        	android:onClick="startCalc" />
-    </TableRow>
-</TableLayout>
+            android:id="@+id/are_you_ready"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/ready"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <Button
+            android:id="@+id/start_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:onClick="startCalc"
+            android:text="@string/start_button" />
+
+        <Button
+            android:id="@+id/goal_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:onClick="goalCalc"
+            android:text="@string/goal_button" />
+
+        <Button
+            android:id="@+id/save_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="saveTown"
+            android:text="@string/save_button" />
+
+        <Button
+            android:id="@+id/load_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:onClick="loadTown"
+            android:text="@string/load_button" />
+    </LinearLayout>
+
+</LinearLayout>
